<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>Dynami-UI</artifactId>
	<version>1.0.0</version>
	<name>Dynami-UI</name>
	<description>Dynami project user interface programm</description>
	<repositories>
		<repository>
			<id>dynami-ui-in-project</id>
			<name>In Project Repo</name>
			<url>file://${project.basedir}/libs</url>
		</repository>
	</repositories>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
		</dependency>
		<dependency>
			<groupId>eu.hansolo</groupId>
			<artifactId>medusa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.dynami</groupId>
			<artifactId>Dynami-Core</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.dynami</groupId>
			<artifactId>Dynami-TA</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>extfx</groupId>
			<artifactId>extfx</artifactId>
			<version>0.3</version>
		</dependency>
		<dependency>
			<groupId>com.tictactec</groupId>
			<artifactId>ta-lib</artifactId>
			<version>0.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.dynami</groupId>
			<artifactId>Dynami-Runtime</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>11</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>11</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>11.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>11.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>11.0.1</version>
		</dependency>
	</dependencies>
	<groupId>org.dynami</groupId>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.controlsfx</groupId>
				<artifactId>controlsfx</artifactId>
				<version>8.40.11</version>
			</dependency>
			<dependency>
				<groupId>eu.hansolo</groupId>
				<artifactId>medusa</artifactId>
				<version>4.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>